modified:   App.js 	modified:   RequireUser.js 	modified:   CreatePost.js 	modified:   CreatePost.scss 	new file:   Nav.js 	new file:   Nav.scss 	modified:   Home.js 	modified:   Login.js 	new file:   NewHome.js 	new file:   NewHome.scss 	modified:   Signup.js

--- a/client1/src/components/createPost/CreatePost.scss
+++ b/client1/src/components/createPost/CreatePost.scss
@@ -33,7 +33,7 @@
         }
         .labelImg {
             display: inline-block;
-            background-color: var(--accent-color);
+            background-color: deepskyblue;
             color: white;
             display: flex;
             justify-content: center;
