--- a/client1/src/pages/login/Login.scss
+++ b/client1/src/pages/login/Login.scss
@@ -3,6 +3,10 @@
     display:flex;
     justify-content:center;
     align-items:center;
+    background-image: url("../../assets/img7.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     .heading{
         text-align:center;
     }
