Added tweet button in CreatePost

--- a/client1/src/components/createPost/CreatePost.scss
+++ b/client1/src/components/createPost/CreatePost.scss
@@ -34,7 +34,7 @@
         .labelImg {
             display: inline-block;
             background-color: var(--accent-color);
-            color: white;
+            color:aqua;
             display: flex;
             justify-content: center;
             align-items: center;
