--- a/client1/src/pages/login/Login.scss
+++ b/client1/src/pages/login/Login.scss
@@ -1,43 +1,55 @@
-.Login{
-    height:100vh;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    .heading{
-        text-align:center;
+
+.Login {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .heading {
+        text-align: center;
     }
-    .login-box{
+    background-image: linear-gradient(rgba(181, 181, 227, 0.8),rgba(76, 76, 142, 0.8)),url(/pages/backg.jpeg);
+        background-position: center;
+        background-size: cover;
+        position: relative;
+
+    .login-box {
         padding: 40px;
         min-width: 400px;
-        border: 1px solid black;
-        border-radius: 4px;
-    }
-    label,input{
-       display:block;
-       width:100%;
-       margin-block:8px;
-    }
-    label{
-        font-weight:bold;
-    }
-    input{
-        padding: 8px 16px;
-        border-radius:4px;
-        border:1px solid black;
-    }
-    .submit {
         
+        border-radius: 4px;
+        
+    }
+
+    label, input {
+        display: block;
+        width: 100%;
+        margin-block: 8px;
+    }
+
+    label {
+        font-weight: bold;
+    }
+
+    input {
+        padding: 8px 16px;
+        border-radius: 4px;
+        border: 1px solid black;
+    }
+
+    .submit {
         background-color: #29b4ff;
         color: white;
         border: none;
-        margin-top: 8px;
+        margin-top: 16px;
         font-weight: bold;
     }
+
     .submit:hover {
         background-color: #249dde;
     }
+
     .subheading {
         margin-top: 16px;
     }
-
 }
