--- a/client1/src/components/createPost/CreatePost.scss
+++ b/client1/src/components/createPost/CreatePost.scss
@@ -5,6 +5,10 @@
     padding: 20px;
     gap: 20px;
     margin-top: 20px;
+    background: ghostwhite;
+    margin-left: 288px;
+    margin-right: 61px;
+    margin-bottom: 30px;
 
     .left-part {
         flex-grow: 0;
@@ -22,10 +26,12 @@
             border: 1px solid var(--border-color);
             border-radius: 4px;
         }
-
+        .img-container[src=""]{
+            display: none !important; 
+        }
         .img-container {
             margin-top: 20px;
-
+            
             .post-img {
                 width: 100%;
                 aspect-ratio: 16 / 9;
@@ -42,6 +48,7 @@
             height: 40px;
             border-radius: 50%;
             cursor: pointer;
+            border: white;
         }
 
         .inputImg {
@@ -53,6 +60,25 @@
             margin-top: 20px;
             justify-content: space-between;
             align-items: center;
+        }
+        .post-btn{
+            background-color: #ff0042;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: 'Roboto';
+    border-radius: 4px;
+    border: none;
+    padding-left: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-right: 16px;
+    margin-top: 16px;
+    min-width: 60px;
+    align-self: flex-start;
+    outline: none;
+    cursor: pointer;
+  
         }
     }
 }
