--- a/client1/src/components/post/Post.scss
+++ b/client1/src/components/post/Post.scss
@@ -1,7 +1,10 @@
 .Post {
-    border: 1px solid var(--border-color);
-    margin-top: 20px;
-    border-radius: 4px;
+    border: 5px solid lightsteelblue;
+    margin-top: 5px;
+    margin-left: 284px;
+    margin-right: 56px;
+    border-radius: 10px;
+    background-color: aliceblue;
     
     .heading {
         display: flex;
@@ -11,9 +14,12 @@
         padding: 20px;
         cursor: pointer;
     }
+    .content[src=""]{
+        display: none;
+    }
     .content {
         height: 400px;
-
+        
         img {
             width: 100%;
             height: 100%;
@@ -35,7 +41,8 @@
         }
 
         .caption {
-            margin-top: 12px;
+            margin: 1px 0px 0px 0px !important;
+            padding: 0px 0px 1px 30px !important;
         }
 
         .time-ago {
