--- a/client1/src/components/profile/Profile.scss
+++ b/client1/src/components/profile/Profile.scss
@@ -40,7 +40,24 @@
             align-items: center;
             gap: 40px;
         }
-
+        .update-button{
+            background-color: fade-in($color: rgba(62, 62, 180, 0.299), $amount: 0.9);
+        color: #ffffff;
+        font-size: 14px;
+        font-family: 'Roboto';
+        border-radius: 4px;
+        border: none;
+        padding-left: 16px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        padding-right: 16px;
+        margin-top: 16px;
+        min-width: 60px;
+        align-self: flex-start;
+        outline: none;
+        cursor: pointer;
+  
+        }
         .follow, .update-profile {
             margin-top: 20px;
             display: inline-block;
