--- a/client1/src/components/commentPost/Comments.css
+++ b/client1/src/components/commentPost/Comments.css
@@ -88,10 +88,11 @@
     border: 1px solid #cbd2d9;
     border-radius: 4px;
     padding-left: 16px;
+    margin-left: 10px;
     padding-top: 8px;
     padding-bottom: 8px;
     outline: none;
-    width: 608px;
+    width: 500px;
   }
   
   .add-button {
